--- a/lab/c8.md
+++ b/lab/c8.md
@@ -144,5 +144,39 @@ int main() {
 
 ## 테일러 급수 계산
 ```c
+#define _CRT_SECURE_NO_WARNINGS
+#include<stdio.h>
+#include<stdlib.h>
 
+double power(int x, int y) {
+	double result = 1.0;
+	for (int i = 0; i < y; i++) {
+		result *= x;
+	}
+	return result;
+}
+
+
+double factorial(int n) {
+	double result = 1.0;
+	if (n <= 1)return 1;
+	for (int i = 1; i <= n; i++) {
+		result *= i;
+	}
+	return result;
+}
+
+
+int main() {
+	double sum = 0.0;
+	int x, n;
+	printf("x와 n의 값을 입력하시오: ");
+	scanf("%d %d", &x, &n);
+	for (int i = 0; i < n; i++) {
+		sum += power(x, i) / factorial(i);
+	}
+	printf("e^%d=%.3lf\n", x, sum);
+	return 0;
+}
 ```
+![image](https://github.com/user-attachments/assets/cc4b4fd6-61c5-4ab3-b53a-b1d88fd155fa)
